--- a/index.html
+++ b/index.html
@@ -64,12 +64,17 @@
                     <img src="image9.jpg" alt="Project 9">
                     <p class="description"></p>
                 </div>
-		
-
             </div>
         </div>
     </div>
-    
+
+<!-- Scrolling Line at the Bottom -->
+    <div class="scrolling-line">
+        <div class="scrolling-text">
+            Collaborated with: Documenta 15; Habitat; Gruppo Grezz; Solidary Wheels; Università degli Studi di Bolzano; 
+        </div>
+    </div>    
+
     <script src="script.js"></script>
 </body>
 </html>
