--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
                     <img src="image9.jpg" alt="Project 9">
                     <p class="description"></p>
                 </div>
+		 <div class="carousel-item">
+                    <img src="image10.jpg" alt="Project 10">
+                    <p class="description"></p>
+                </div>
+
             </div>
         </div>
     </div>
@@ -71,7 +76,7 @@
 <!-- Scrolling Line at the Bottom -->
     <div class="scrolling-line">
         <div class="scrolling-text">
-            Collaborated with: Documenta 15; Habitat; Gruppo Grezz; Solidary Wheels; Università degli Studi di Bolzano; 
+            365 + 75 years of occupation 
         </div>
     </div>    
 
