--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <!-- Scrolling Line at the Bottom -->
     <div class="scrolling-line">
         <div class="scrolling-text">
-            365 + 75 years of occupation 
+            Everything in publishing is a political act, from the language we use to the aesthetics, the layout, even down to the logo. Every choice carries intention, holding subtle power and meaning. In collaborative publishing, each page becomes a site of negotiation, each typeface a deliberate stance, each design element an open invitation for collective reflection. Graphic design isn’t just a set of visual choices; it’s an unfolding, communal process shaped by shared ideas and hands-on experimentation. Every publication is a living act of collaboration, charged with purpose and shaped by the many voices that bring it to life. 
         </div>
     </div>    
 
